force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Released_In__c/agf__ADM_Released_In__c.object-meta.xml
<CustomObject>
    <description>Object to define the releases that a fix was deployed to.  Each Work record has a one to many relationship with releases.</description>
    <label>Released In</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Released In #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Released In</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>