force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Released_In__c/fields/agf__Release_Name__c.field-meta.xml
<CustomField>
    <fullName>agf__Release_Name__c</fullName>
    <description>Used as a temporary storage for a look up against a map of release names to Ids</description>
    <label>Release Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>