force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Released_In__c/fields/agf__Reverted__c.field-meta.xml
<CustomField>
    <fullName>agf__Reverted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reverted</label>
    <type>Checkbox</type>
</CustomField>