force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Released_In__c/fields/agf__Scheduled_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Scheduled_Release_Date__c</fullName>
    <formula>agf__Release__r.agf__Release_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release Date</label>
    <type>DateTime</type>
</CustomField>