force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Released_In__c/fields/agf__Selected__c.field-meta.xml
<CustomField>
    <fullName>agf__Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected</label>
    <type>Checkbox</type>
</CustomField>