force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Released_In__c/fields/agf__Stamped_On__c.field-meta.xml
<CustomField>
    <fullName>agf__Stamped_On__c</fullName>
    <description>Date/time that the release stamp was stamped.</description>
    <label>Stamped On</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>