force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Released_In__c/fields/agf__Work__c.field-meta.xml
<CustomField>
    <fullName>agf__Work__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work ID</label>
    <referenceTo>agf__ADM_Work__c</referenceTo>
    <relationshipName>WorkReleasedIn</relationshipName>
    <type>Lookup</type>
</CustomField>