force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Released_In__c/listViews/agf__All.listView-meta.xml
<ListView>
    <fullName>agf__All</fullName>
    <columns>agf__Release_Name__c</columns>
    <columns>agf__Work__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>